# building3d-rs

./: .gitignore  AGENTS.md  BESTEST.md  CLAUDE.md  Cargo.toml  DRAWING_CONFIG.md  ENERGYPLUS.md  ENERGY_PROMPT.md  FVM.md  ISSUES_CLAUDE.md  ISSUES_CODEX.md  LEGACY_SIMULATION.md  NEXT_STEP.md  NEXT_STEPS.md  PHYSICS.md  README.md  REFERENCES.md  REWRITE_PLAN.md  SIMULATION.md  VALIDATION_LOG.md  test-cov.sh
.github/workflows/: ci.yml
examples/: bench_teapot.rs  bras_cr2.rs  building.rs  building_draw_polygons.rs  building_draw_rerun.rs  building_rerun.rs  draw_box.rs  draw_delaunay.rs  draw_delaunay_refined.rs  draw_faces.rs  draw_many.rs  draw_rerun.rs  draw_shapes.rs  floor_plan.rs  pipeline_solar_energy.rs  pipeline_weather_shaded_energy.rs  ray_2_boxes.rs  ray_teapot.rs  sim_acoustics.rs  sim_energy.rs  sim_fvm_wall.rs  sim_lighting.rs  sim_lighting_heatmap.rs
examples/bestest_600_energy/: .gitignore  README.md  feature_sweep.csv  generate_figures.py  main.rs
examples/bestest_900_energy/: README.md  feature_sweep.csv  main.rs  results.csv
examples/bestest_energy_suite/: .gitignore  README.md  download_data.sh  generate_figures.py  main.rs  plot_results.py
examples/bras_cr2/: README.md  generate_figures.py  main.rs  results.csv
examples/sim_fvm_3d/: README.md  main.rs
examples/sim_fvm_wall/: README.md  main.rs
examples/sim_fvm_wall_viz/: README.md  main.rs
src/: draw.rs  geom.rs  id.rs  lib.rs  main.rs  name.rs  sortbyname.rs  uid.rs  vecutils.rs  world.rs
src/draw/: acoustics.rs  config.rs  lighting.rs  rerun.rs  (+2 more)
tests/: bestest_energy_suite.rs
(+131 files in other folders)
