[package]
name = "building3d"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Towards 3D building modeling and simulation"

[dependencies]
anyhow = "1.0.99"
uuid = { version = "1.18.1", features = ["fast-rng", "v4"] }
three-d = { version = "0.18", features = ["window"] }
ndarray = "0.16.1"
rerun = "0.25.1"
