[package]
name = "building3d"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Towards 3D building modeling and simulation"

[dependencies]
anyhow = "1.0.99"
uuid = { version = "1.18.1", features = ["fast-rng", "v4"] }
ndarray = "0.16.1"
rerun = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.20"
